<resources>
    <string name="app_name">FeriaFriki</string>
    <string name="img_panda">Panda FeriaFriki</string>
    <string name="logo_panda">FeriaFriki</string>
    <string name="nuevo_usuario">Registrarse</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="tv_separar"> </string>
    <string name="tv_o">O</string>
    <string name="acceso">Acceder</string>
    <string name="correo">Correo</string>
    <string name="pwd">Clave</string>
    <string name="tv_datos">Ingrese sus datos</string>
    <string name="et_nombre">Nombre</string>
    <string name="et_apellido">Apellido</string>
    <string name="et_pwd">*Contraseña</string>
    <string name="et_correo">*Correo</string>
    <string name="tv_registro">Registro</string>
    <string name="tv_obligatorios">*Campos obligatorios</string>
    <string name="btn_registro">Registrarse</string>
    <string name="et_sexo">Sexo</string>
    <string name="et_nacimiento">Fecha de Nacimiento(dd/mm/aaaa)</string>
    <string name="et_cargarimagen">*Cargar avatar</string>
    <string name="btn_cargarimagen">Subir Imagen</string>
    <string name="btn_facebook">Facebook</string>
    <string name="tv_exito1">Su registro se ha</string>
    <string name="tv_exito2">realizado con éxito</string>
    <string name="btn_volver">Volver</string>
    <string name="btn_haztesocio">Hazte Socio</string>
    <string name="et_nick">Nick (apodo)</string>
    <string name="et_celular">*Celular</string>
    <string name="et_cargarfondo">*Cargar imagen de fondo</string>
    <string name="et_direccion">*Dirección</string>
    <string name="et_rut">*Rut</string>
    <string name="tv_detfeccompra">Fecha de compra</string>
    <string name="tv_fecha">00/00/0000</string>
    <string name="btn_pagar">Pagar</string>
    <string name="tv_registrosocio">Registro Socio</string>
    <string name="tv_sunumero">Su número de</string>
    <string name="tv_numsocio">Socio es el: 12345</string>
    <string name="btn_vercredencial">Ver Credencial</string>
    <string name="tv_carga">*Selecciona aquí tú avatar</string>
    <string name="btn_fecNacimiento">Seleccionar</string>
    <string name="et_fecNacimiento">Fecha de nacimiento</string>
    <string name="tv_sexo">Escoja su avatar</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="tv_detalle">Espera detalle...</string>
    <string name="tv_estado">Espera estado...</string>
    <string name="btn_actualizar">Actualizar</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="signed_out">Signed Out</string>
    <string name="auth_failed">Error en inicio de sesión</string>
    <string name="title_activity_perfil_usuario">FeriaFriki</string>
    <string name="title_home">Perfil</string>
    <string name="title_dashboard">Credencial</string>
    <string name="title_notifications">Eventos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_credencial_usuario">CredencialUsuario</string>

</resources>
