<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFD54F"
    tools:context=".Exito">

    <LinearLayout
        android:id="@+id/ly_check"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_check"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:contentDescription="@string/img_panda"
            app:srcCompat="@mipmap/check" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="189dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_exito1"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="203dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_exito2"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="131dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_volver"
                android:layout_width="238dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/borde_redondo"
                android:onClick="Volver"
                android:text="@string/btn_volver"
                android:textColor="@android:color/background_light" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_separar" />

            <Button
                android:id="@+id/btn_hazte"
                android:layout_width="238dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/btn_haztesocio"
                android:onClick="Siguiente"
                android:text="@string/btn_haztesocio"
                android:textColor="@android:color/background_light" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>