<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".RegistroSocio2">

    <TableLayout
        android:layout_width="330dp"
        android:layout_height="492dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="362dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="318dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/logo_panda"
                    app:srcCompat="@mipmap/feriafrikinegro" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_registrosocio"
                    android:textColor="@android:color/background_light"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_obligatorios"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:text="@string/tv_separar" />

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="318dp"
                    android:layout_height="39dp"
                    android:background="@drawable/et_borderedondo"
                    android:ems="10"
                    android:hint="@string/et_direccion"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_separar" />

                <EditText
                    android:id="@+id/editText5"
                    android:layout_width="318dp"
                    android:layout_height="39dp"
                    android:background="@drawable/et_borderedondo"
                    android:ems="10"
                    android:hint="@string/et_rut"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_separar" />

                <TextView
                    android:id="@+id/tv_detallefeccompra"
                    android:layout_width="202dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tv_detfeccompra"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_feccompra"
                    android:layout_width="156dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tv_fecha"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_separar" />

                <Button
                    android:id="@+id/btn_pagar"
                    android:layout_width="318dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_haztesocio"
                    android:onClick="Pagar"
                    android:text="@string/btn_pagar"
                    android:textColor="#ffffff" />

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

</android.support.constraint.ConstraintLayout>