<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFD54F"
    tools:context=".IniciarSesion">

    <TableLayout
        android:id="@+id/tbl_iniciarSesion"
        android:layout_width="319dp"
        android:layout_height="302dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ly_datos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:contentDescription="@string/logo_panda"
                    app:srcCompat="@mipmap/logo" />

                <TextView
                    android:id="@+id/tv_nada"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_separar" />

                <TextView
                    android:id="@+id/tv_datos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_datos"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_separar" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ly_correo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_correoinisesion"
                    android:layout_width="318dp"
                    android:layout_height="45dp"
                    android:background="@drawable/et_borderedondo"
                    android:ems="10"
                    android:hint="@string/correo"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/tv_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_separar" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ly_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/et_borderedondo"
                    android:ems="10"
                    android:hint="@string/pwd"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/tv_acceso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_separar" />

                <TextView
                    android:id="@+id/tv_estado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_estado"
                    android:textColor="#FFD54F"
                    android:textSize="1sp" />

                <TextView
                    android:id="@+id/tv_detalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_detalle"
                    android:textColor="#FFD54F"
                    android:textSize="1sp" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="111dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_acceder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borde_redondo"
                    android:onClick="onClick"
                    android:text="@string/iniciar_sesion"
                    android:textColor="@android:color/background_light" />

            </LinearLayout>

        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>