<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".RegistroSocio">

    <TableLayout
        android:layout_width="353dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="381dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ly_registrosocio"
                android:layout_width="wrap_content"
                android:layout_height="377dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_ffriki"
                    android:layout_width="318dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/logo_panda"
                    app:srcCompat="@mipmap/feriafrikinegro" />

                <TextView
                    android:id="@+id/tv_registroSocio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_registrosocio"
                    android:textColor="#ffffff"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_camposOblig"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_obligatorios"
                    android:textColor="#Ffffff"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/tv_separar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_separar" />

                <EditText
                    android:id="@+id/et_nombreSocio"
                    android:layout_width="318dp"
                    android:layout_height="39dp"
                    android:background="@drawable/et_borderedondo"
                    android:ems="10"
                    android:hint="@string/et_nick"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_separar" />

                <EditText
                    android:id="@+id/et_telefonoSocio"
                    android:layout_width="318dp"
                    android:layout_height="39dp"
                    android:background="@drawable/et_borderedondo"
                    android:ems="10"
                    android:hint="@string/et_celular"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_separar" />

                <LinearLayout
                    android:layout_width="348dp"
                    android:layout_height="44dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_imagen"
                        android:layout_width="254dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/et_borderedondo"
                        android:ems="10"
                        android:hint="@string/et_cargarfondo"
                        android:inputType="textPersonName" />

                    <Button
                        android:id="@+id/btn_cargar"
                        android:layout_width="44dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/borde_redondo"
                        android:text="@string/btn_cargarimagen"
                        android:textColor="@android:color/background_light" />

                    <LinearLayout
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@string/tv_separar" />

                <Button
                    android:id="@+id/btn_siguiente"
                    android:layout_width="318dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borde_redondo"
                    android:onClick="Siguiente"
                    android:text="@string/btn_siguiente"
                    android:textColor="@android:color/background_light" />

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

</android.support.constraint.ConstraintLayout>